Test : test post update